munit/v/1.2/munit-suite.adoc
=  MUnit Suite
：version-info：3.7.0及更高版本
:keywords: munit, testing, unit testing

== 定义

MUnit框架中的基础文件是*MUnit Test Suite file*。这些文件是位于Mule应用程序文件夹结构中`src/test/munit`文件夹下的`.xml`文件。每个MUnit测试套件文件都是MUnit测试的集合。它意味着独立工作，并且应该能够独立于其他MUnit测试套件文件运行。

M ==  MUnit测试套件的组件

MUnit测试套件文件应包含以下组件的任意组合：

*  <<Imports>>
*  Bean定义
*  <<Before/After Suites>>
*  <<Before/After Tests>>
*  <<MUnit Tests>>

提示：每个MUnit测试套件文件在幕后都与Mule不同
应用程序XML文件。您可以使用几个Mule顶级元素，例如 link:/mule-user-guide/v/3.8/flows-and-subflows[流量，子流量]， link:/mule-management-console/v/3.8/automating-tasks-using-scripts[脚本]等。

== 进口
=== 定义导入

每个MUnit套件旨在测试一组特定的Mule流。为此，您需要告诉MUnit这些流程在您的应用程序结构中定义的位置。为此我们使用_imports_，其实际上是_spring imports_。


[tabs]
------
[tab,title="Studio Visual Editor"]
....
In the *Global Elements Tab* of your _MUnit Test Suite_, go to your *Import (Configuration)* element, and double-click it to show the *Global Element Properties*:

image:munit-import-global-element.png[munit-import-global-element]

Edit the *Resource:* field with the reference of the .xml file name of the application you are testing.
....
[tab,title="XML or Standalone Editor"]
....
[source, xml, linenums]
.Spring Import Example
----
<spring:beans>
  <spring:import resource="classpath:your-production-code.xml"/>
</spring:beans>
----
....
------


警告：如果您的应用程序分布在多个文件中，并且这些文件中的组件彼此交叉引用，则需要导入所有文件。

提示：理想情况下，您的生产代码和流程应以紧密结合的方式进行排列 - 这样可以提高可读性，可维护性和可测试性。

== 套房之前/之后
=== 定义套件之前和之后

与其他测试框架一样，MUnit提供了围绕测试套件概念的特定功能。
特别是，您可以添加要在_before_和/或_after_整个运行期间运行的处理/操作
MUnit测试套件执行。

==== 定义Before Suite

MUnit Before Suite是一个范围。它可以包含旨在整个套件*_before_*执行的代码。

例如，假设您有一个包含四个测试的MUnit测试套件文件。 MUnit Before Suite中的代码只运行一次，然后进行四次测试。

MUnit Before Suite是__top级范围___，因此您可以根据需要安装许多套件。他们都遵循相同的执行规则：_Run在测试之前，只是一次。

警告：如果有多个Before Suite，MUnit不能保证Before Suites在他们自己之间运行的顺序。



[tabs]
------
[tab,title="Studio Visual Editor"]
....

image:before-suite.png[before-suite]

Note that the `before-suite` is located outside the MUnit test.
....
[tab,title="XML or Standalone Editor"]
....
[source, xml, linenums]
.Before Suite example
----
<munit:before-suite name="before.suite" description="A description">
  <!-- some mule code here -->
</munit:before-suite >

<munit:test name="munit.test" description="Test">
  <!-- some more mule code here -->
</munit:test>
----

Note that the `before-suite` is located outside the MUnit test.
....
------

[cols="30,70"]
|===
|属性名称 |描述

| `name`
|定义Before套件的名称。该名称在套件内必须是唯一的。

| `description`
|描述所执行的操作。

|===

提示：MUnit Before Suite有用的一个实例是在整个测试运行之前需要设置测试环境的时候。

==== 定义After Suite

MUnit After Suite是一个范围。它可以包含要在整个套件之后执行的代码。

例如，假设您有一个包含四个测试的MUnit测试套件文件。 MUnit After Suite中的代码，在你所有的测试之后，只会执行一次。

MUnit After Suite是__top级范围___，因此您可以根据需要安装尽可能多的After Suites。
他们都遵循相同的执行规则：_测试后，运行一次。

警告：如果有多个After Suite，MUnit不能保证After Suite在它们之间运行的顺序。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:after-suite.png[after-suite]

Note that the `after-suite` is located outside the MUnit test
....
[tab,title="XML or Standalone Editor"]
....
[source, xml, linenums]
.After Suite example
----
<munit:before-suite name="before.suite" description="A description">
  <!-- some mule code here -->
</munit:before-suite >

<munit:test name="munit.test" description="Test">
  <!-- some more mule code here -->
</munit:test>

<munit:after-suite  name="after.suite" description="A description">
  <!-- some Mule code here -->
</munit:after-suite >
----

Note that the `after-suite` is located outside the MUnit test
....
------


[cols="30,70"]
|===
|属性名称 |描述

| `name`
|定义After套件的名称。该名称在套件内必须是唯一的。

| `description`
|描述所执行的操作。

|===

提示：MUnit After Suite有用的一个实例是在整个测试运行后需要设置测试环境的时候。

在测试之前/之后== 
=== 定义测试前后

MUnit提供了执行_Before_和_After_测试的功能。这些与JUnit定义的概念类似。您可以添加要在执行每个MUnit测试套件时执行_before_和/或__之后的处理/操作。

==== 定义测试前

测试前的MUnit是一个范围。它可以包含旨在在each_test之前执行的代码。

例如，假设您有一个包含四个测试的MUnit测试套件文件。 MUnit Before之前的代码在您的四个tests_的*each*之前测试_runs;它运行四次。

测试前的MUnit是__top级的范围___，因此您可以根据需要进行多次测试。他们都遵循相同的执行规则：每次测试之前的_Run。

警告：如果有多个Before测试，MUnit不能保证Before测试之间的顺序。


[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:before-test.png[before-test]

Note that the `before.test` is located outside the MUnit test
....
[tab,title="XML or Standalone Editor"]
....
[source, xml, linenums]
.Before Test example
----
<munit:before-test name="before.tests" description="A description">
  <!-- some mule code here -->
</munit:before-test>

<munit:test name="munit.test" description="Test">
  <!-- some more mule code here -->
</munit:test>
----
Note that the `before.test` is located outside the MUnit test
....
------

[cols="30,70"]
|===
|属性名称 |描述

| *name*
|定义Before测试的名称。测试中名称必须是唯一的。

| *description*
|描述所执行的操作。

|===

提示：MUnit After Suite有用的一个实例是在整个测试运行后需要设置测试环境的时候。

==== 定义测试后

测试后的MUnit是一个范围。它可以包含在each_test之后执行的代码。

例如，假设您有一个包含四个测试的MUnit测试套件文件。测试后的MUnit中的代码_runs在您的四个tests_的*each*之后;它运行四次。

测试后的MUnit是__top级别的范围___，所以您可以根据需要进行尽可能多的测试后。
他们都遵循相同的执行规则：_每个test_后运行。

警告：如果有多个After测试，MUnit不保证测试之后的顺序。


[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:after-test.png[after-test]
Note that the `after.suite` is located outside the MUnit test
....
[tab,title="XML or Standalone Editor"]
....
[source, xml, linenums]
.After Test example
----
<munit:before-test name="before.tests" description="A description">
  <!-- some mule code here -->
</munit:before-test>

<munit:test name="munit.test" description="Test">
  <!-- some more mule code here -->
</munit:test>

<munit:after-test  name="after.test" description="A description">
  <!-- some mule code here -->
</munit:after-test>
----

Note that the `after.suite` is located outside the MUnit test
....
------


[cols="30,70"]
|===
|属性名称 |描述

| *name*
|定义After测试的名称。测试中名称必须是唯一的。

| *description*
|描述所执行的操作。

|===

提示：MUnit After测试有用的一个实例是在整个测试运行后需要设置测试环境时。

==  MUnit测试
=== 定义一个MUnit测试

*MUnit Test*是MUnit测试套件的基本构建模块。它代表您想要尝试的每个测试场景。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:defining-munit-test.png[defining-munit-test]
....
[tab,title="XML or Standalone Editor"]
....
[source, xml, linenums]
----
<munit:test name="my-flow-Test" description="Test to verify scenario 1">
</munit:test>
----
....
------

.MUnit测试属性
[cols="30,70"]
|===
| {名称{1}}说明

| `name`
| *Mandatory.*定义测试的名称。测试套件中的名称必须是唯一的。

| `description`
| *Mandatory.*描述正在测试的场景。

| `ignore`
|定义测试是否应该被忽略。如果不存在，测试不会被忽略。

| `expectException`
|定义执行此测试后应该收到的异常。

|===

==== 定义属性

在MUnit中，您可以从`mule­-app.properties`文件加载属性，也可以使用`context:property-placeholder`从其他文件加载属性。

当使用Anypoint Studio运行MUnit时，MUnit提供了几种方法来覆盖这些属性。 `mule-app.properties`文件的属性作为系统属性加载。

==== 定义MUnit测试描述

在MUnit中，您必须在测试中撰写说明，即`description`属性为必填项。

理想情况下，你应该写一个有用的，有代表性的描述你正在测试的场景。此说明在运行测试之前以及报告中显示在测试控制台中。

提示：说明越具代表性，越容易阅读和排除故障。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:defining-test.png[defining-test]
....
[tab,title="XML or Standalone Editor"]
....
[source, xml, linenums]
----
<munit:test name="testingEchoFlow"
    description="We want to test that the flow always returns the same payload as we had before calling it.">
----
....
------

==== 定义要忽略的MUnit测试

有些情况下你需要击落测试。这是因为测试失败还是因为它有令人讨厌的副作用。 +
关键是你不应该注释掉代码。

在这种情况下，MUnit允许您忽略特定的测试。

您可以通过将`ignore`布尔值添加到测试定义来忽略任何测试，如下所示。

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:ignore-test.png[ignore-test]
....
[tab,title="XML or Standalone Editor"]
....
[source, xml, linenums]
----
<munit:test name="my-flow-Test"
      ignore="true"
      description="Test to verify scenario 1">
</munit:test>
----
TIP: Valid values for `ignore` are *true* and *false*. If the attribute is not present, the default is false.
....
------

==== 定义预期的例外

有时候，唯一要验证的是您正在测试的流或子流失败并抛出一个特定的异常，这取决于正在测试的业务逻辑。在这些情况下，MUnit提供了一种验证场景的简单方法。

在这些情况下，您可以添加属性`expectException`，如下所示。


[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:expect-exception.png[expect-exception.png]
....
[tab,title="XML or Standalone Editor"]
....
[source, xml, linenums]
----
<munit:test name="testExceptions" description="Test Exceptions" expectException="">
  <flow-ref name="exceptionFlow"/>
</munit:test>
----
....
------

属性`expectException`期望以下之一：

* 一个字面的异常类名（规范形式）
*  MEL表达式

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:expect-exception-literal.png[expect-exception-literal]
....
[tab,title="XML or Standalone Editor"]
....
[source, xml, linenums]
----
<munit:test name="testExceptions" description="Test Exceptions" expectException="java.lang.RuntimeException">
  <flow-ref name="exceptionFlow"/>
</munit:test>
----
....
------

如果你定义你的测试期望有一个异常并且没有被抛出，测试立即失败。

====  expectException  - 文字值

当您提供一个字面值时，它应该采用预期的异常的_canonical类name_的形式。在这些情况下，Mule总是抛出`MuleMessagingException`。如果引发的`MuleMessagingException`的基本原因是完全相同的类型，则MUnit将验证提供的类名。

提示：以这种方式提供异常时，所提供的异常的子类不能通过验证--MUnit查找完全相同的类型。

====  expectException  -  MEL表达式值

如果您选择使用表达式，Mule本身提供了一组MEL表达式，这些表达式简化了对抛出异常的验证。

[cols="30,70"]
|===
| {名称{1}}说明

| `exception.causedBy(exception_type)`
|评估异常是否由所提供的异常类型（的实例）引起。
*Example*：`exception.causedBy(org.mule.example.ExceptionType)`

| `exception.causedExactlyBy(exception_type)`
|评估异常是否由所提供的特定异常类型引起，并放弃所有其他异常类型。例如，如果提供的异常类型为`NullPointerException`，则只有当测试返回NullPointerException时，该表达式才返回true。
*Example*：`exception.causedExactlyBy(org.mule.example.ExceptionType)`

| `exception.causeMatches(<regex>)`
|检查引发异常类型名称与提供的正则表达式匹配。支持任何java正则表达式加，前缀，后缀。 *Example*：`exception.causeMatches(org.mule.example.*)`

|===

提示：您可以将任何表达式组合为布尔表达式。例如：+
`exception.causeMatches（'*'）&&！exception.causedBy（java.lang.ArithmeticException）&&
！exception.causedBy（org.mule.api.registry.ResolverException）`

此MEL表达式旨在与上面列出的表达式一起使用，但不执行验证以避免其他用法。唯一实施的合同是：*The MEL expression should return a boolean value. If true, the test is successful*。

如果MEL表达式返回不能转换为布尔值的内容，则测试失败。

所有MEL表达式快捷方式（例如`message`或`payload`）都是有效的。请记住，如果抛出异常，原始有效负载很可能会丢失。

